Fix #305: Layout problems due to CSS files loaded in random order The 2 rules have still the same priority but now have the same content.

--- a/ViewStack/themes/ViewStack_template.less
+++ b/ViewStack/themes/ViewStack_template.less
@@ -1,6 +1,6 @@
 @import "../../../../delite/themes/bootstrap/includes";
 .d-view-stack {
-	height: 200px;
+	height: 100%;
 	display: block;
 	.box-sizing(border-box);
 	position: relative; // Enables clipping
